--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -73,7 +73,7 @@ button.bs-placeholder:hover{
     margin-top: 20px;
   }
 
-  @media screen and (min-width: 768px) {
+  @media (min-width: 768px) {
     .tab-button-outer {
       position: relative;
       z-index: 2;
@@ -357,7 +357,7 @@ h5.mb-0 button {
 
     /**/
 
-    @media (max-width: 992px){
+    @media (max-width: 768px){
         #main-wrapper {
             margin-top: 0;
         }
@@ -1151,6 +1151,7 @@ h5.mb-0 button {
     @media(max-width: 990px){
     .busqueda-inst-med{
         width: 75%;
+        display: none;
     }
 }
 
