--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -357,7 +357,7 @@ h5.mb-0 button {
 
     /**/
 
-    @media (max-width: 768px) and (orientation: landscape){
+    @media (max-width: 540px){
         #main-wrapper {
             margin-top: 0;
         }
