--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -358,8 +358,17 @@ h5.mb-0 button {
     /**/
 
     @media (max-width: 1140px){
+
+
         #main-wrapper {
             margin-top: 0;
+
+        }
+        .col-lg-9 {
+            -webkit-box-flex: 0;
+            -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+            max-width: 100%;
         }
 
         .panel-filtros-c {
