--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -360,6 +360,9 @@ h5.mb-0 button {
     @media (max-width: 1140px){
 
 
+        body{
+            padding-top: 150px;
+        }
         #main-wrapper {
             margin-top: 0;
 
