--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -378,6 +378,9 @@ h5.mb-0 button {
 
     @media (max-width: 1140px){
 
+        .left-sidebar{
+            display: none;
+        }
 
         body{
         }
